--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ test:
   image: python:3.6
   stage: test
   script:
-  - python manage.py test -k
+  - python manage.py test --keepdb
   only:
   - merge_requests
 
@@ -30,7 +30,7 @@ deploy:
     - test
   script:
     - pip install coverage
-    - coverage run --source='.' manage.py test -k
+    - coverage run --source='.' manage.py test --keepdb
     - coverage report
   only:
     - master
